@@ -21,13 +21,11 @@ import org.apache.logging.log4j.Logger;
 
 import tilda.generation.interfaces.CodeGenAppData;
 import tilda.generation.interfaces.CodeGenAppFactory;
-import tilda.generation.interfaces.CodeGenAppJson;
-import tilda.generation.interfaces.CodeGenTildaData;
 import tilda.generation.interfaces.CodeGenDocs;
-import tilda.generation.interfaces.CodeGenTildaFactory;
-import tilda.generation.interfaces.CodeGenTildaJson;
 import tilda.generation.interfaces.CodeGenSql;
 import tilda.generation.interfaces.CodeGenSqlDocs;
+import tilda.generation.interfaces.CodeGenTildaData;
+import tilda.generation.interfaces.CodeGenTildaFactory;
 import tilda.generation.interfaces.CodeGenTildaSupport;
 
 public class GeneratorSession
@@ -74,16 +72,16 @@ public class GeneratorSession
     protected boolean InitCodeGenerators(String ClassKey)
       {
         try{
-          _DocsGenerator         = (CodeGenDocs        ) Class.forName("tilda.generation."+ClassKey+".Docs"   ).newInstance();
+          _DocsGenerator         = (CodeGenDocs        ) Class.forName("tilda.generation."+ClassKey+".Docs"   ).getDeclaredConstructor().newInstance();
 
-          _TildaSupportGenerator = (CodeGenTildaSupport) Class.forName("tilda.generation."+ClassKey+".TildaSupport").newInstance();
-          _TildaDataGenerator    = (CodeGenTildaData   ) Class.forName("tilda.generation."+ClassKey+".TildaData"   ).newInstance();
-          _TildaFactoryGenerator = (CodeGenTildaFactory) Class.forName("tilda.generation."+ClassKey+".TildaFactory").newInstance();
-          _TildaJsonGenerator    = (CodeGenTildaJson   ) Class.forName("tilda.generation."+ClassKey+".TildaJson"   ).newInstance();
+          _TildaSupportGenerator = (CodeGenTildaSupport) Class.forName("tilda.generation."+ClassKey+".TildaSupport").getDeclaredConstructor().newInstance();
+          _TildaDataGenerator    = (CodeGenTildaData   ) Class.forName("tilda.generation."+ClassKey+".TildaData"   ).getDeclaredConstructor().newInstance();
+          _TildaFactoryGenerator = (CodeGenTildaFactory) Class.forName("tilda.generation."+ClassKey+".TildaFactory").getDeclaredConstructor().newInstance();
+//          _TildaJsonGenerator    = (CodeGenTildaJson   ) Class.forName("tilda.generation."+ClassKey+".TildaJson"   ).getDeclaredConstructor().newInstance();
 
-          _AppDataGenerator      = (CodeGenAppData     ) Class.forName("tilda.generation."+ClassKey+".AppData"     ).newInstance();
-          _AppFactoryGenerator   = (CodeGenAppFactory  ) Class.forName("tilda.generation."+ClassKey+".AppFactory"  ).newInstance();
-          _AppJsonGenerator      = (CodeGenAppJson     ) Class.forName("tilda.generation."+ClassKey+".AppJson"     ).newInstance();
+          _AppDataGenerator      = (CodeGenAppData     ) Class.forName("tilda.generation."+ClassKey+".AppData"     ).getDeclaredConstructor().newInstance();
+          _AppFactoryGenerator   = (CodeGenAppFactory  ) Class.forName("tilda.generation."+ClassKey+".AppFactory"  ).getDeclaredConstructor().newInstance();
+//          _AppJsonGenerator      = (CodeGenAppJson     ) Class.forName("tilda.generation."+ClassKey+".AppJson"     ).getDeclaredConstructor().newInstance();
         }
         catch (Throwable T)
           {
@@ -95,8 +93,8 @@ public class GeneratorSession
     protected boolean InitDBGenerators(String ClassKey)
       {
         try{
-          _SqlClassGenerator = (CodeGenSql    ) Class.forName("tilda.generation."+ClassKey+".Sql" ).newInstance();
-          _SqlDocsGenerator  = (CodeGenSqlDocs) Class.forName("tilda.generation."+ClassKey+".Docs").newInstance();
+          _SqlClassGenerator = (CodeGenSql    ) Class.forName("tilda.generation."+ClassKey+".Sql" ).getDeclaredConstructor().newInstance();
+          _SqlDocsGenerator  = (CodeGenSqlDocs) Class.forName("tilda.generation."+ClassKey+".Docs").getDeclaredConstructor().newInstance();
         }
         catch (Throwable T)
           {
@@ -114,11 +112,11 @@ public class GeneratorSession
     protected CodeGenTildaSupport _TildaSupportGenerator;
     protected CodeGenTildaData    _TildaDataGenerator   ;
     protected CodeGenTildaFactory _TildaFactoryGenerator;
-    protected CodeGenTildaJson    _TildaJsonGenerator   ;
+//    protected CodeGenTildaJson    _TildaJsonGenerator   ;
     
     protected CodeGenAppData      _AppDataGenerator     ;
     protected CodeGenAppFactory   _AppFactoryGenerator  ;
-    protected CodeGenAppJson      _AppJsonGenerator     ;
+//    protected CodeGenAppJson      _AppJsonGenerator     ;
     
     public CodeGenSql          getSql            () { return _SqlClassGenerator    ; }
     public CodeGenSqlDocs      getSqlDocs        () { return _SqlDocsGenerator     ; }
@@ -128,10 +126,10 @@ public class GeneratorSession
     public CodeGenTildaSupport getGenTildaSupport() { return _TildaSupportGenerator; }
     public CodeGenTildaData    getGenTildaData   () { return _TildaDataGenerator   ; }
     public CodeGenTildaFactory getGenTildaFactory() { return _TildaFactoryGenerator; }
-    public CodeGenTildaJson    getGenTildaJson   () { return _TildaJsonGenerator   ; }
+//    public CodeGenTildaJson    getGenTildaJson   () { return _TildaJsonGenerator   ; }
     
     public CodeGenAppData      getGenAppData     () { return _AppDataGenerator     ; }
     public CodeGenAppFactory   getGenAppFactory  () { return _AppFactoryGenerator  ; }
-    public CodeGenAppJson      getGenAppJson     () { return _AppJsonGenerator     ; }
+//    public CodeGenAppJson      getGenAppJson     () { return _AppJsonGenerator     ; }
 
   }
